--- a/index.html
+++ b/index.html
@@ -64,8 +64,12 @@
             </div>
 
             <section class="movie-body">
-                <h1>Popular This Week</h1>
-                <div class="popular-people"></div>
+                <h1>Popular Actors/Actress of the Week</h1>
+                <div class="popular-people">
+                    <!-- <div class="container">
+                        <img class="person" src=${IMAGE_URL + x.profile_path}>
+                    </div> -->
+                </div>
             </section>
         </section>
     </body>
