--- a/index.html
+++ b/index.html
@@ -10,68 +10,76 @@
             href="https://fonts.googleapis.com/css2?family=Roboto&display=swap"
             rel="stylesheet"
         />
-        <link rel="preconnect" href="https://fonts.gstatic.com">
+        <link rel="preconnect" href="https://fonts.gstatic.com" />
         <script
             src="https://kit.fontawesome.com/d9a1b3fb2a.js"
             crossorigin="anonymous"
         ></script>
         <title>The Movie Network</title>
     </head>
-    
 
     <body>
-        <nav>
-            <div class="nav-bar">
-                <div class="logo">
-                    <i class="fab fa-github-square"></i>
-                </div>
-                <h5>MAIN</h5>
-                <div>
-                    <a href="#" class="nav-btn"
-                        ><i class="fas icon fa-home"></i>Home</a
-                    >
-                </div>
-                <div>
-                    <a href="#" class="nav-btn"
-                        ><i class="far icon fa-clock"></i>Newly Release</a
-                    >
-                </div>
-                <div>
-                    <a href="#" class="nav-btn"
-                        ><i class="fas icon fa-fire-alt"></i>Hot Releases</a
-                    >
-                </div>
-            </div>
-            <div class="movies">
-                <H5>CATEGORIES</H5>
-                <div class="genres">
-                    <div class="genre-list">
-                        <a href="#"><i class="far icon fa-folder"></i></i>People</a>
+        
+            <nav>
+                <div class="nav-bar">
+                    <div class="logo">
+                        <i class="fas fa-fire"> AH Films Studios</i>
+                    </div>
+                    <div class="main-header">
+
+                        <form class="search-form">
+                            <button type="submit" class="submit-btn">
+                                <i class="fas fa-search"></i>
+                            </button>
+                            <input
+                                type="text"
+                                name="search"
+                                placeholder="Search For Movies.."
+                                class="search-input"
+                            />
+                        </form>
+                    </div>
+                    <div class="nav-btns">
+                        <div>
+                            <a href="#" class="nav-btn"
+                                ><i class="fas icon fa-home"></i>Home</a
+                            >
+                        </div>
+                        <div>
+                            <a href="#" class="nav-btn"
+                                ><i class="far icon fa-clock"></i>Newly
+                                Release</a
+                            >
+                        </div>
+                        <div>
+                            <a href="#" class="nav-btn"
+                                ><i class="fas icon fa-fire-alt"></i>Hot
+                                Releases</a
+                            >
+                        </div>
+                        <div>
+                            <a
+                                href="https://frontalbert.github.io/Portfolio2021/"
+                                class="nav-btn"
+                                ><i class="fab fa-github"></i
+                            ></a>
+                        </div>
                     </div>
                 </div>
-            </div>
-        </nav>
+            </nav>
 
-        <section id="main">
-            <div class='main-header'>
-                <form class="search-form">
-                    <button type="submit" class="submit-btn"><i class="fas fa-search"></i></button>
-                    <input type="text" name="search" placeholder="Search For Movies.." class="search-input" />
-                  </form>
-                  <div>
-                      <a href="https://frontalbert.github.io/Portfolio2021/"><i class="fas icon fa-sign-out-alt"></i></a>
-                  </div>
-            </div>
-
-            <section class="movie-body">
-                <h1>Popular Actors/Actress of the Week</h1>
-                <div class="popular-people">
-                    <!-- <div class="container">
+            <div class="wrapper">
+            <section id="main">
+                <div class="movie-body">
+                    <h1>Popular Actors/Actress of the Week</h1>
+                    <div class="popular-people">
+                        <!-- <div class="container">
                         <img class="person" src=${IMAGE_URL + x.profile_path}>
                     </div> -->
+                    </div>
                 </div>
             </section>
-        </section>
+        </div>
     </body>
 
     <script src="main.js"></script>
