--- a/index.html
+++ b/index.html
@@ -68,14 +68,21 @@
                 </div>
             </nav>
 
-            <div class="wrapper">
+            <div>
             <section id="main">
                 <div class="movie-body">
-                    <h1>Popular Actors/Actress of the Week</h1>
-                    <div class="popular-people">
-                        <!-- <div class="container">
-                        <img class="person" src=${IMAGE_URL + x.profile_path}>
-                    </div> -->
+                    <div>
+                        <h1>In Theatres Right Now!</h1>
+                        <div class="now-playing"></div>
+                    </div>
+                    <div>
+                        <h1>Trending for the week</h1>
+                        <div class="trending-movies"></div>
+                    </div>
+                    <div>
+                        <h1>Popular Actors/Actress of the Week</h1>
+                        <div class="popular-people"></div>
+                        </div>
                     </div>
                 </div>
             </section>
