--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <nav>
                 <div class="nav-bar">
                     <div class="logo">
-                        <i class="fas fa-fire"> AH Films Studios</i>
+                        <i class="fas fa-fire"> AH Studios</i>
                     </div>
                     <div class="main-header">
 
@@ -71,6 +71,8 @@
             <div>
             <section id="main">
                 <div class="movie-body">
+                    <div class="search-results">
+                    </div>
                     <div>
                         <h1 class='first-header'>In Theatres Right Now!</h1>
                         <div class="movie-flex">
@@ -121,7 +123,7 @@
             </div>
             <div class="footer-row3">
                 <i class="far fa-copyright"></i>
-                <p>Not an Amazon Company</p>
+                <p>Not an Tesla Company</p>
             </div>
 
         </footer>
