added overview on hover for searched movies

--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
             <nav>
                 <div class="nav-bar">
                     <div class="logo">
-                        <i class="fas fa-fire"> AH Studios</i>
+                        <i class="fas fa-fire"> THE DATABASE</i>
                     </div>
                     <div class="main-header">
 
@@ -71,6 +71,7 @@
             <div>
             <section id="main">
                 <div class="movie-body">
+
                     <div class="search-results">
                     </div>
                     <div>
