--- a/hot.html
+++ b/hot.html
@@ -15,7 +15,7 @@
             src="https://kit.fontawesome.com/d9a1b3fb2a.js"
             crossorigin="anonymous"
         ></script>
-        <title>The Movie Network</title>
+        <title>The DATABASE</title>
     </head>
 
     <body>
@@ -41,7 +41,7 @@
                     </div>
                     <div class="nav-btns">
                         <div>
-                            <a href="#" class="nav-btn"
+                            <a href="index.html" class="nav-btn"
                                 ><i class="fas icon fa-home"></i>Home</a
                             >
                         </div>
@@ -68,48 +68,6 @@
                 </div>
             </nav>
 
-            <div>
-            <section id="main">
-                <div class="movie-body">
-
-                    <div class="search-results">
-                    </div>
-                    <div>
-                        <h1 class='first-header'>In Theatres Right Now!</h1>
-                        <div class="movie-flex">
-                            <div class="now-playing"></div>
-                            <div class="now-playing-news">
-                                <h2>Seen them all already? How about these!</h2>
-                                <div class="hot-films"></div>
-                                <a href="#" class="more-info">More Info</a>
-                            </div>
-                        </div>
-                    </div>
-                    <div>
-                        <h1>Trending for the week</h1>
-                        <div class="movie-flex">
-                            <div class="now-playing-news">
-                                <h2>Some Weekly News</h2>
-                                <div class='weekly-trend'>
-                                    <a href="index.html">The Best Movie Site of 2020s?</a>
-                                    <a href="https://www.imdb.com/golden-globes/nominees-streaming/ls084844806/mediaviewer/rm2181869313/?pf_rd_r=WGXQ4E1BYYBKGFHGK6AD&pf_rd_p=f15ff318-46c1-4cfe-9080-8893ef215796&pf_rd_m=A2FGELUUNOQJNL&pf_rd_t=15061&pf_rd_i=home&pf_rd_s=featured-today-2"> Our Golden Globe Watch List of 2020!</a>
-                                    <a href="https://www.imdb.com/golden-globes/power-couples/rg3319700224/mediaviewer/rm2132399361/?pf_rd_r=WGXQ4E1BYYBKGFHGK6AD&pf_rd_p=ae95bf11-e5ec-4b61-85dd-9b96bb106b92&pf_rd_m=A2FGELUUNOQJNL&pf_rd_t=15061&pf_rd_i=home&pf_rd_s=featured-today-1">Hollywood Romances, Our Favorite Couples so far..</a>
-                                    <a href="https://www.imdb.com/name/nm0000138/?ref_=hm_rvi_nm">Leonardio DiCaprio, early retirement?</a>
-                                    
-                                </div>
-                            </div>
-                            <div class="trending-movies"></div>
-                        </div>
-
-                    </div>
-                    <div>
-                        <h1>Popular Actors/Actress of the Week</h1>
-                        <div class="popular-people"></div>
-                        </div>
-                    </div>
-                </div>
-            </section>
-        </div>
         <footer>
             <div class="footer-row1">
                 <ul>
