--- a/newly.html
+++ b/newly.html
@@ -68,6 +68,16 @@
                 </div>
             </nav>
 
+        <main>
+            <div class="movie-body">
+                <div class="search-results">
+                </div>
+            </div>
+            <div class="newly">
+            </div>
+
+        </main>
+
         <footer>
             <div class="footer-row1">
                 <ul>
@@ -89,6 +99,7 @@
     </body>
 
     <script src="main.js"></script>
+    <script src="newly.js"></script>
 </html>
 
 <!-- #ffffff • #d0e1f9 • #4d648d • #283655 • #1e1f26 -->
