--- a/hot.html
+++ b/hot.html
@@ -68,6 +68,18 @@
                 </div>
             </nav>
 
+            
+        <main>
+            <div class="movie-body">
+                <div class="search-results">
+                </div>
+            </div>
+            <div class="newly">
+                
+            </div>
+
+        </main>
+
         <footer>
             <div class="footer-row1">
                 <ul>
