--- a/hot.html
+++ b/hot.html
@@ -69,16 +69,17 @@
             </nav>
 
             
-        <main>
-            <div class="movie-body">
-                <div class="search-results">
+            <main>
+                <div class="secondary-body">
+                    <div class="search-results"></div>
+                    <div>
+                        <h1 class="first-header">Popular At The Moment</h1>
+                        <div class="secondary-flex">
+                            <div class="secondary-playing"></div>
+                        </div>
+                    </div>
                 </div>
-            </div>
-            <div class="newly">
-                
-            </div>
-
-        </main>
+            </main>
 
         <footer>
             <div class="footer-row1">
@@ -101,6 +102,7 @@
     </body>
 
     <script src="main.js"></script>
+    <script src="hot.js"></script>
 </html>
 
 <!-- #ffffff • #d0e1f9 • #4d648d • #283655 • #1e1f26 -->
