--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
                             <div class="now-playing-news">
                                 <h2>Seen them all already? How about these!</h2>
                                 <div class="hot-films"></div>
-                                <a href="#" class="more-info">More Info</a>
+                                <a href="newly.html" class="more-info">More Info</a>
                             </div>
                         </div>
                     </div>
