--- a/newly.html
+++ b/newly.html
@@ -19,63 +19,61 @@
     </head>
 
     <body>
-        
-            <nav>
-                <div class="nav-bar">
-                    <div class="logo">
-                        <i class="fas fa-fire"> THE DATABASE</i>
+        <nav>
+            <div class="nav-bar">
+                <div class="logo">
+                    <i class="fas fa-fire"> THE DATABASE</i>
+                </div>
+                <div class="main-header">
+                    <form class="search-form">
+                        <button type="submit" class="submit-btn">
+                            <i class="fas fa-search"></i>
+                        </button>
+                        <input
+                            type="text"
+                            name="search"
+                            placeholder="Search For Movies.. maybe Avengers?"
+                            class="search-input"
+                        />
+                    </form>
+                </div>
+                <div class="nav-btns">
+                    <div>
+                        <a href="index.html" class="nav-btn"
+                            ><i class="fas icon fa-home"></i>Home</a
+                        >
                     </div>
-                    <div class="main-header">
-
-                        <form class="search-form">
-                            <button type="submit" class="submit-btn">
-                                <i class="fas fa-search"></i>
-                            </button>
-                            <input
-                                type="text"
-                                name="search"
-                                placeholder="Search For Movies.. maybe Avengers?"
-                                class="search-input"
-                            />
-                        </form>
+                    <div>
+                        <a href="newly.html" class="nav-btn"
+                            ><i class="far icon fa-clock"></i>Newly Release</a
+                        >
                     </div>
-                    <div class="nav-btns">
-                        <div>
-                            <a href="index.html" class="nav-btn"
-                                ><i class="fas icon fa-home"></i>Home</a
-                            >
-                        </div>
-                        <div>
-                            <a href="newly.html" class="nav-btn"
-                                ><i class="far icon fa-clock"></i>Newly
-                                Release</a
-                            >
-                        </div>
-                        <div>
-                            <a href="hot.html" class="nav-btn"
-                                ><i class="fas icon fa-fire-alt"></i>Hot
-                                Releases</a
-                            >
-                        </div>
-                        <div>
-                            <a
-                                href="https://frontalbert.github.io/Portfolio2021/"
-                                class="nav-btn"
-                                ><i class="fab fa-github"></i
-                            ></a>
-                        </div>
+                    <div>
+                        <a href="hot.html" class="nav-btn"
+                            ><i class="fas icon fa-fire-alt"></i>Hot Releases</a
+                        >
+                    </div>
+                    <div>
+                        <a
+                            href="https://frontalbert.github.io/Portfolio2021/"
+                            class="nav-btn"
+                            ><i class="fab fa-github"></i
+                        ></a>
                     </div>
                 </div>
-            </nav>
+            </div>
+        </nav>
 
         <main>
-            <div class="movie-body">
-                <div class="search-results">
+            <div class="secondary-body">
+                <div class="search-results"></div>
+                <div>
+                    <h1 class="first-header">Newly Release</h1>
+                    <div class="secondary-flex">
+                        <div class="secondary-playing"></div>
+                    </div>
                 </div>
             </div>
-            <div class="newly">
-            </div>
-
         </main>
 
         <footer>
@@ -94,7 +92,6 @@
                 <i class="far fa-copyright"></i>
                 <p>Not an Tesla Company</p>
             </div>
-
         </footer>
     </body>
 
