--- a/hot.html
+++ b/hot.html
@@ -20,53 +20,51 @@
 
     <body>
         
-            <nav>
-                <div class="nav-bar">
-                    <div class="logo">
-                        <i class="fas fa-fire"> THE DATABASE</i>
+        <nav>
+            <div class="nav-bar">
+                <div class="logo">
+                    <i class="fas fa-fire"></i>
+                    <p class='hidetext'>THE DATABASE</p>
+                </div>
+                <div class="main-header">
+                    <form class="search-form">
+                        <button type="submit" class="submit-btn">
+                            <i class="fas fa-search"></i>
+                        </button>
+                        <input
+                            type="text"
+                            name="search"
+                            placeholder="Search For Movies.. maybe Avengers?"
+                            class="search-input"
+                        />
+                    </form>
+                </div>
+                <div class="nav-btns">
+                    <div>
+                        <a href="index.html" class="nav-btn"
+                            ><i class="fas icon fa-home"></i><p class='hidetext'>Home</p></a
+                        >
                     </div>
-                    <div class="main-header">
-
-                        <form class="search-form">
-                            <button type="submit" class="submit-btn">
-                                <i class="fas fa-search"></i>
-                            </button>
-                            <input
-                                type="text"
-                                name="search"
-                                placeholder="Search For Movies.. maybe Avengers?"
-                                class="search-input"
-                            />
-                        </form>
+                    <div>
+                        <a href="newly.html" class="nav-btn"
+                            ><i class="far icon fa-clock"></i><p class='hidetext'>New Releases</p></a
+                        >
                     </div>
-                    <div class="nav-btns">
-                        <div>
-                            <a href="index.html" class="nav-btn"
-                                ><i class="fas icon fa-home"></i>Home</a
-                            >
-                        </div>
-                        <div>
-                            <a href="newly.html" class="nav-btn"
-                                ><i class="far icon fa-clock"></i>Newly
-                                Release</a
-                            >
-                        </div>
-                        <div>
-                            <a href="hot.html" class="nav-btn"
-                                ><i class="fas icon fa-fire-alt"></i>Hot
-                                Releases</a
-                            >
-                        </div>
-                        <div>
-                            <a
-                                href="https://frontalbert.github.io/Portfolio2021/"
-                                class="nav-btn"
-                                ><i class="fab fa-github"></i
-                            ></a>
-                        </div>
+                    <div>
+                        <a href="hot.html" class="nav-btn"
+                            ><i class="fas icon fa-fire-alt"></i><p class='hidetext'>Hot Movies</p></a
+                        >
+                    </div>
+                    <div>
+                        <a
+                            href="https://frontalbert.github.io/Portfolio2021/"
+                            class="nav-btn"
+                            ><i class="fab fa-github"></i
+                        ></a>
                     </div>
                 </div>
-            </nav>
+            </div>
+        </nav>
 
             
             <main>
