--- a/newly.html
+++ b/newly.html
@@ -22,7 +22,8 @@
         <nav>
             <div class="nav-bar">
                 <div class="logo">
-                    <i class="fas fa-fire"> THE DATABASE</i>
+                    <i class="fas fa-fire"></i>
+                    <p class='hidetext'>THE DATABASE</p>
                 </div>
                 <div class="main-header">
                     <form class="search-form">
@@ -40,17 +41,17 @@
                 <div class="nav-btns">
                     <div>
                         <a href="index.html" class="nav-btn"
-                            ><i class="fas icon fa-home"></i>Home</a
+                            ><i class="fas icon fa-home"></i><p class='hidetext'>Home</p></a
                         >
                     </div>
                     <div>
                         <a href="newly.html" class="nav-btn"
-                            ><i class="far icon fa-clock"></i>Newly Release</a
+                            ><i class="far icon fa-clock"></i><p class='hidetext'>New Releases</p></a
                         >
                     </div>
                     <div>
                         <a href="hot.html" class="nav-btn"
-                            ><i class="fas icon fa-fire-alt"></i>Hot Releases</a
+                            ><i class="fas icon fa-fire-alt"></i><p class='hidetext'>Hot Movies</p></a
                         >
                     </div>
                     <div>
