--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 
                     <div class="search-results">
                     </div>
-                    <div>
+                    <div class="body">
                         <h1 class='first-header'>In Theatres Right Now!</h1>
                         <div class="movie-flex">
                             <div class="now-playing"></div>
@@ -83,7 +83,7 @@
                             </div>
                         </div>
                     </div>
-                    <div>
+                    <div class="body">
                         <h1>Trending for the week</h1>
                         <div class="movie-flex">
                             <div class="now-playing-news">
