animations with GSAP

--- a/hot.html
+++ b/hot.html
@@ -19,12 +19,11 @@
     </head>
 
     <body>
-        
         <nav>
             <div class="nav-bar">
                 <div class="logo">
                     <i class="fas fa-fire"></i>
-                    <p class='hidetext'>THE DATABASE</p>
+                    <p class="hidetext">THE DATABASE</p>
                 </div>
                 <div class="main-header">
                     <form class="search-form">
@@ -42,17 +41,20 @@
                 <div class="nav-btns">
                     <div>
                         <a href="index.html" class="nav-btn"
-                            ><i class="fas icon fa-home"></i><p class='hidetext'>Home</p></a
+                            ><i class="fas icon fa-home"></i>
+                            <p class="hidetext">Home</p></a
                         >
                     </div>
                     <div>
                         <a href="newly.html" class="nav-btn"
-                            ><i class="far icon fa-clock"></i><p class='hidetext'>New Releases</p></a
+                            ><i class="far icon fa-clock"></i>
+                            <p class="hidetext">New Releases</p></a
                         >
                     </div>
                     <div>
                         <a href="hot.html" class="nav-btn"
-                            ><i class="fas icon fa-fire-alt"></i><p class='hidetext'>Hot Movies</p></a
+                            ><i class="fas icon fa-fire-alt"></i>
+                            <p class="hidetext">Hot Movies</p></a
                         >
                     </div>
                     <div>
@@ -66,18 +68,17 @@
             </div>
         </nav>
 
-            
-            <main>
-                <div class="secondary-body">
-                    <div class="search-results"></div>
-                    <div>
-                        <h1 class="first-header">Popular At The Moment</h1>
-                        <div class="secondary-flex">
-                            <div class="secondary-playing"></div>
-                        </div>
+        <main>
+            <div class="secondary-body">
+                <div class="search-results"></div>
+                <div>
+                    <h1 class="first-header">Popular At The Moment</h1>
+                    <div class="secondary-flex">
+                        <div class="secondary-playing"></div>
                     </div>
                 </div>
-            </main>
+            </div>
+        </main>
 
         <footer>
             <div class="footer-row1">
@@ -95,10 +96,14 @@
                 <i class="far fa-copyright"></i>
                 <p>Not an Tesla Company</p>
             </div>
-
         </footer>
     </body>
 
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"
+        integrity="sha512-1dalHDkG9EtcOmCnoCjiwQ/HEB5SDNqw8d4G2MKoNwjiwMNeBAkudsBCmSlMnXdsH8Bm0mOd3tl/6nL5y0bMaQ=="
+        crossorigin="anonymous"
+    ></script>
     <script src="main.js"></script>
     <script src="hot.js"></script>
 </html>
