--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
     <body>
         
         <nav>
-            <div class="nav-bar">
+            <div class="nav-bar nav-header">
                 <div class="logo">
                     <i class="fas fa-fire"></i>
                     <p class='hidetext'>THE DATABASE</p>
@@ -72,7 +72,7 @@
 
                     <div class="search-results">
                     </div>
-                    <div class="body">
+                    <div class="slide">
                         <h1 class='first-header'>In Theatres Right Now!</h1>
                         <div class="movie-flex">
                             <div class="now-playing"></div>
@@ -83,7 +83,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="body">
+                    <div class="slide">
                         <h1>Trending for the week</h1>
                         <div class="movie-flex">
                             <div class="now-playing-news">
@@ -100,7 +100,7 @@
                         </div>
 
                     </div>
-                    <div>
+                    <div class="slide">
                         <h1>Popular Actors/Actress of the Week</h1>
                         <div class="popular-people"></div>
                         </div>
@@ -127,7 +127,7 @@
 
         </footer>
     </body>
-
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js" integrity="sha512-1dalHDkG9EtcOmCnoCjiwQ/HEB5SDNqw8d4G2MKoNwjiwMNeBAkudsBCmSlMnXdsH8Bm0mOd3tl/6nL5y0bMaQ==" crossorigin="anonymous"></script>
     <script src="main.js"></script>
 </html>
 
