--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="slide">
+                    <div class="reveal">
                         <h1>Trending for the week</h1>
                         <div class="movie-flex">
                             <div class="now-playing-news">
@@ -100,7 +100,7 @@
                         </div>
 
                     </div>
-                    <div class="slide">
+                    <div class="slide reveal">
                         <h1>Popular Actors/Actress of the Week</h1>
                         <div class="popular-people"></div>
                         </div>
@@ -127,7 +127,10 @@
 
         </footer>
     </body>
+    <!-- GSAP ANIMATION -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js" integrity="sha512-1dalHDkG9EtcOmCnoCjiwQ/HEB5SDNqw8d4G2MKoNwjiwMNeBAkudsBCmSlMnXdsH8Bm0mOd3tl/6nL5y0bMaQ==" crossorigin="anonymous"></script>
+    <!-- GSAP SCROLL TRIGGER -->
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ScrollTrigger.min.js" integrity="sha512-QcYm1q7RbnXmwY7HJ0H7938IS0MalTPYqGUF0fIwQgEjMBt2tqjDBt+R5I+ppdwEohjMdHnFU0H+RxmrGQ8qcg==" crossorigin="anonymous"></script>
     <script src="main.js"></script>
 </html>
 
