--- a/index.html
+++ b/index.html
@@ -83,7 +83,7 @@
                             </div>
                         </div>
                     </div>
-                    <div class="reveal">
+                    <div >
                         <h1>Trending for the week</h1>
                         <div class="movie-flex">
                             <div class="now-playing-news">
@@ -100,7 +100,7 @@
                         </div>
 
                     </div>
-                    <div class="slide reveal">
+                    <div class="actors">
                         <h1>Popular Actors/Actress of the Week</h1>
                         <div class="popular-people"></div>
                         </div>
@@ -130,7 +130,9 @@
     <!-- GSAP ANIMATION -->
     <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js" integrity="sha512-1dalHDkG9EtcOmCnoCjiwQ/HEB5SDNqw8d4G2MKoNwjiwMNeBAkudsBCmSlMnXdsH8Bm0mOd3tl/6nL5y0bMaQ==" crossorigin="anonymous"></script>
     <!-- GSAP SCROLL TRIGGER -->
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/ScrollTrigger.min.js" integrity="sha512-QcYm1q7RbnXmwY7HJ0H7938IS0MalTPYqGUF0fIwQgEjMBt2tqjDBt+R5I+ppdwEohjMdHnFU0H+RxmrGQ8qcg==" crossorigin="anonymous"></script>
+    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/gsap-latest-beta.min.js?r=5426" ></script>
+    <script src="https://s3-us-west-2.amazonaws.com/s.cdpn.io/16327/ScrollTrigger.min.js" ></script>
+    <script src="https://codepen.io/GreenSock/pen/7ba936b34824fefdccfe2c6d9f0b740b" ></script>
     <script src="main.js"></script>
 </html>
 
