--- a/hot.html
+++ b/hot.html
@@ -20,10 +20,9 @@
 
     <body>
         <nav>
-            <div class="nav-bar">
+            <div class="nav-bar nav-header">
                 <div class="logo">
-                    <i class="fas fa-fire"></i>
-                    <p class="hidetext">THE DATABASE</p>
+                    <p class="hidetext">MOVIEFY</p>
                 </div>
                 <div class="main-header">
                     <form class="search-form">
@@ -40,7 +39,7 @@
                 </div>
                 <div class="nav-btns">
                     <div>
-                        <a href="index.html" class="nav-btn"
+                        <a href="home.html" class="nav-btn"
                             ><i class="fas icon fa-home"></i>
                             <p class="hidetext">Home</p></a
                         >
