--- a/newly.html
+++ b/newly.html
@@ -20,10 +20,9 @@
 
     <body>
         <nav>
-            <div class="nav-bar">
+            <div class="nav-bar nav-header">
                 <div class="logo">
-                    <i class="fas fa-fire"></i>
-                    <p class='hidetext'>THE DATABASE</p>
+                    <p class="hidetext">MOVIEFY</p>
                 </div>
                 <div class="main-header">
                     <form class="search-form">
@@ -40,18 +39,21 @@
                 </div>
                 <div class="nav-btns">
                     <div>
-                        <a href="index.html" class="nav-btn"
-                            ><i class="fas icon fa-home"></i><p class='hidetext'>Home</p></a
+                        <a href="home.html" class="nav-btn"
+                            ><i class="fas icon fa-home"></i>
+                            <p class="hidetext">Home</p></a
                         >
                     </div>
                     <div>
                         <a href="newly.html" class="nav-btn"
-                            ><i class="far icon fa-clock"></i><p class='hidetext'>New Releases</p></a
+                            ><i class="far icon fa-clock"></i>
+                            <p class="hidetext">New Releases</p></a
                         >
                     </div>
                     <div>
                         <a href="hot.html" class="nav-btn"
-                            ><i class="fas icon fa-fire-alt"></i><p class='hidetext'>Hot Movies</p></a
+                            ><i class="fas icon fa-fire-alt"></i>
+                            <p class="hidetext">Hot Movies</p></a
                         >
                     </div>
                     <div>
@@ -96,7 +98,11 @@
         </footer>
     </body>
 
-    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js" integrity="sha512-1dalHDkG9EtcOmCnoCjiwQ/HEB5SDNqw8d4G2MKoNwjiwMNeBAkudsBCmSlMnXdsH8Bm0mOd3tl/6nL5y0bMaQ==" crossorigin="anonymous"></script>
+    <script
+        src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"
+        integrity="sha512-1dalHDkG9EtcOmCnoCjiwQ/HEB5SDNqw8d4G2MKoNwjiwMNeBAkudsBCmSlMnXdsH8Bm0mOd3tl/6nL5y0bMaQ=="
+        crossorigin="anonymous"
+    ></script>
     <script src="main.js"></script>
     <script src="newly.js"></script>
 </html>
