--- a/index.html
+++ b/index.html
@@ -38,5 +38,6 @@
         </header>
         <div class="search-results"></div>
     </body>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/3.6.0/gsap.min.js"></script>
     <script src="home.js"></script>
 </html>
